# duihua-background-worker

./: AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: publish.yml  validate.yml
charts/duihua-background-worker/: Chart.yaml  values.yaml
charts/duihua-background-worker/templates/: _helpers.tpl  deployment.yaml  scaledobject.yaml  serviceaccount.yaml
scripts/: helm-smoke-kind.sh
src/: main.rs  queue.rs  responses_store.rs  worker.rs
